--- a/SHME.csproj
+++ b/SHME.csproj
@@ -52,6 +52,9 @@
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Logo_SHME.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -163,6 +166,7 @@
     <None Include="Resources\MoveDown.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Logo_SHME.ico" />
     <Content Include="png16.dll" />
     <None Include="Resources\toolMove.png" />
     <None Include="Resources\toolPencil.png" />
