Saving limit Max|Min states; Added reload HMap; Map locking on load error fixed; Rudiment cycle removed.

--- a/SHME.csproj
+++ b/SHME.csproj
@@ -201,6 +201,7 @@
     <None Include="Resources\toolLevelFlatenUp.png" />
     <None Include="Resources\toolLevelFlatenDown.png" />
     <None Include="Resources\eye.png" />
+    <None Include="Resources\reload.png" />
     <Content Include="zlib1.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
