--- a/SHME.csproj
+++ b/SHME.csproj
@@ -177,7 +177,7 @@
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
       <Visible>False</Visible>
-      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 and x64%29</ProductName>
+      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 и x64%29</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
@@ -243,6 +243,7 @@
     <None Include="Resources\bulletPlus.png" />
     <None Include="Resources\checkerEmpty.png" />
     <None Include="Resources\checkerFilled.png" />
+    <None Include="Resources\ADrive.png" />
     <Content Include="zlib1.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
