Added CoursePlay module.

--- a/SHME.csproj
+++ b/SHME.csproj
@@ -26,7 +26,7 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <ApplicationVersion>1.2.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -244,6 +244,8 @@
     <None Include="Resources\checkerEmpty.png" />
     <None Include="Resources\checkerFilled.png" />
     <None Include="Resources\ADrive.png" />
+    <None Include="Resources\executeNo.png" />
+    <None Include="Resources\reuse.png" />
     <Content Include="zlib1.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
