--- a/SHME.csproj
+++ b/SHME.csproj
@@ -26,7 +26,7 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>1.2.0.%2a</ApplicationVersion>
+    <ApplicationVersion>1.5.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -255,6 +255,10 @@
     <None Include="Resources\gear.png" />
     <None Include="Resources\checkerInvert.png" />
     <None Include="Resources\excangeUpDown.png" />
+    <None Include="Resources\directionIn.png" />
+    <None Include="Resources\directionInBack.png" />
+    <None Include="Resources\directionOut.png" />
+    <None Include="Resources\directionOutBack.png" />
     <Content Include="zlib1.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
