Now tool selection doesn't hide panel

--- a/SHME.csproj
+++ b/SHME.csproj
@@ -138,6 +138,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormSHME.resx">
       <DependentUpon>FormSHME.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
